create admin api service
